Se ha añadido el uso del SD

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -6,7 +6,7 @@
             "appName": "object_detection",
             "vendor": "Api Movilidad",
             "embeddedSdkVersion": "3.0",
-            "runOptions": "/usr/local/packages/object_detection/model/model.tflite 300 300 80 800 600 50 /usr/local/packages/object_detection/label/labels.txt -c cpu-tflite",
+            "runOptions": "/usr/local/packages/object_detection/model/model.tflite 300 300 80 800 600 50 /usr/local/packages/object_detection/label/labels.txt SD_DISK -c cpu-tflite",
             "vendorUrl": "https://www.apimovilidad.es",
             "runMode": "never",
             "version": "1.0.0"
